# ros_uw_osl_nessie_vs

./: CMakeLists.txt  README.md  package.xml
include/imageProcessing/: colorDetection.hpp
launch/: vs_controller_visp.launch
robot/: nessie.urdf  nessie.urdf.xacro  nessie_pantilt.urdf
scenes/: nessie_redbox.xml
src/: dyn_interface.py  findOrientedBoundingBoxe.cpp  robot_cntrl_color_simple.cpp  robot_cntrl_nessie.cpp  robot_cntrl_nessie_front.cpp  robot_cntrl_uwsim.cpp  robot_visp.cpp  servoNessie4Point2DCamVelocity.cpp
src/imageProcessing/: colorDetection.cpp
